[FIX] web: avoid to show the page horizontal scrollbar
Before this commit, the horizontal scrollbar was displayed when some
elements overflowed from the wrapwrap.

This commit avoid the horizontal scrollbar from being displayed on
wrapwrap in any case.

task-2327741

--- a/addons/web/static/src/scss/base_frontend.scss
+++ b/addons/web/static/src/scss/base_frontend.scss
@@ -16,6 +16,7 @@ html, body, #wrapwrap {
     // due to the right editor panel (and since we want to minimize the style
     // difference between edit mode and non-edit mode (wysiwyg)...).
     overflow: auto;
+    overflow-x: hidden;
 
     > * {
         flex: 0 0 auto;
